<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learnzilla</string>
    <string name="action_settings">Settings</string>

    <!--Login Texts-->
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_First_name_hint">First Name</string>
    <string name="login_last_name_hint">Last Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="signup">Signup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>